Fix hotdog hover for touchscreens

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       <div class="general-content">
         <h2>Opinions, Opinions</h2>
         <p> My take on the 'is hot dog a sandwich' question since I think it's worth the talk 🎙️</p>
-        <div id="hotdog"></div>
+        <div id="hotdog" tabindex="0"></div>
         <div id="story"></div>
-        <div class="small-text">hover^</div>
+        <div class="small-text">hover/tap^</div>
       </div>
     </div>
 
